--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ button {
     font-size: 16px;
   }
 
-  input[type=text]{
+  input[type=number]{
     width: 280px;
     padding: 12px 20px;
     margin: 8px 0;
